k8s/networking/traefik/middlewares.yaml
---
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: default-headers
  namespace: default
spec:
  headers:
    browserXssFilter: true
    contentTypeNosniff: true
    forceSTSHeader: true
    stsIncludeSubdomains: true
    stsPreload: true
    stsSeconds: 15552000
    customFrameOptionsValue: SAMEORIGIN
    customRequestHeaders:
      X-Forwarded-Proto: https

---
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: local-only
  namespace: default
spec:
  ipWhiteList:
    sourceRange:
      - "127.0.0.1/32"
      - "10.0.0.0/8"
      - "192.168.0.0/16"
      - "172.16.0.0/12"
      - "100.64.0.0/10"
