k8s/networking/traefik/ingress-route.yaml
---

apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: traefik-dashboard
  namespace: traefik
  annotations:
    kubernetes.io/ingress.class: traefik-external
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`traefik.k8s.sbbh.cloud`)
      kind: Rule
      services:
        - name: api@internal
          kind: TraefikService
